Adiciona endpoint para create contact